# Diabetis

./: README.md  main.py  main_api.py  pipeline.py  pyproject.toml  schema.py  utils.py
.zen/: config.yaml
steps/: data_loader.py  data_prep.py  data_training.py  evaluate_model.py  predict_model.py
