[project]
name = "diabetis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]==0.115.2",
    "imbalanced-learn==0.11.0",
    "logfire[fastapi]>=4.0.0",
    "pandas>=2.3.1",
    "scikit-learn==1.3.2",
    "zenml[server]==0.84.0",
]

[tool.uv.workspace]
members = [
    "zenml",
]
